# palimpsest

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  setup.sh
.github/workflows/: test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/cline/: clinerules-architect.template  clinerules-code.template  clinerules-test.template
case-study/: wolt-crm-migration.md
docs/: 03-setup-guide.md  05-why-ai-despite-hallucinations.md  10-privacy-model.md  roadmap.md
example/: README.md
example/docs/: BACKLOG.md
palimpsest/: __init__.py  console.py  errors.py
palimpsest/agents/: README.md  formatting-standards.md
palimpsest/cli/: __init__.py  main.py
palimpsest/content/: __init__.py
palimpsest/data/: __init__.py
palimpsest/docs/: 02-the-solution.md  07-future-vision.md  09-personal-ai-assistant.md
palimpsest/playbooks/: README.md  cross-timezone-collaboration.md  decision-documentation.md  remote-onboarding.md
palimpsest/project-template/: README.md
palimpsest/scripts/: __init__.py
palimpsest/showcase/: sample-queries.md
palimpsest/templates/: brd.md  document-governance.md  prd.md
playbooks/: reducing-status-meetings.md
project-template/: .gitignore  README.md
project-template/docs/: BACKLOG.md  DASHBOARD.md  PROGRAM_OVERVIEW.md
scripts/: README.md
scripts/automation/: __init__.py  auto_commit_runner.py  clipboard_watcher.py  daily_update_runner.py  read_agent_markers.py  (+1 more)
showcase/: quick-wins.md
templates/: async-reporting-playbook.md  first-weekly-update.md
tests/: conftest.py  test_cli.py  test_content.py  test_errors.py  test_task1_cli.py
(+91 files in other folders)
